deploy/services/apiservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-api-service
  namespace: default
  labels:
    app: api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
        namespace: default
    spec:
      containers:
        - name: api-service
          image: europe-docker.pkg.dev/tactical-works-402510/demo/apiservice:COMMIT_SHA
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /v1/healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 1
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /v1/healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5


---
apiVersion: v1
kind: Service
metadata:
  name: svc-api-service
  namespace: default
spec:
  selector:
    app: api-service
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
