deploy/services/userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-user-service
  namespace: default
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
        namespace: default
    spec:
      containers:
        - name: voucher-service
          image: europe-docker.pkg.dev/tactical-works-402510/demo/userservice:COMMIT_SHA
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-user-service
  namespace: default
spec:
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
