deploy/services/whereami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-whereami
spec:
  selector:
    matchLabels:
      app: whereami
  template:
    metadata:
      labels:
        app: whereami
    spec:
      containers:
        - name: whereami
          image: gcr.io/google-samples/whereami:v1.2.21
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: svc-whereami
spec:
  type: NodePort
  selector:
    app: whereami
  ports:
    - port: 80
      targetPort: 8080
