deploy/services/zoneprinter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-zone-printer
spec:
  selector:
    matchLabels:
      app: zone-printer
  template:
    metadata:
      labels:
        app: zone-printer
    spec:
      containers:
        - name: zone-printer
          image: gcr.io/google-samples/zone-printer:0.2
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: svc-zone-printer
spec:
  type: NodePort
  selector:
    app: zone-printer
  ports:
    - port: 80
      targetPort: 8080
